chore: Add arrow open configs